Closed
Bug 1308105
Opened 9 years ago
Closed 4 years ago
Replace PL_strpbrk with strpbrk
Categories
(Core :: XPCOM, defect, P5)
Core
XPCOM
Tracking
()
RESOLVED
FIXED
93 Branch
Tracking | Status | |
---|---|---|
firefox93 | --- | fixed |
People
(Reporter: cpeterson, Assigned: smurfd)
References
(Blocks 1 open bug)
Details
(Whiteboard: [lang=c++])
Attachments
(1 file)
We should replace NSPR functions with standard C functions when they available on all platforms.
1. Replace PL_strpbrk() calls with strpbrk():
http://searchfox.org/mozilla-central/search?q=%5CbPL_strn%3Fpr%3Fbrk%5Cb®exp=true&path=.cpp%24
*** CAUTION: PL_strpbrk() will return without crashing when passed a null pointer, but strpbrk() will crash! Any calls to PL_strpbrk() that are changed should be audited to see if they might need to handle a null pointer.
2. Add #include <string.h> if it's needed for strpbrk()'s function declaration.
3. Remove #include "plstr.h" if it's no longer needed for other NSPR string function declarations.
Reporter | ||
Updated•9 years ago
|
Mentor: cpeterson
Reporter | ||
Updated•9 years ago
|
Mentor: cpeterson
Reporter | ||
Updated•5 years ago
|
Component: General → String
Updated•5 years ago
|
Component: String → XPCOM
Assignee | ||
Comment 1•4 years ago
|
||
Updated•4 years ago
|
Assignee: nobody → smurfd
Attachment #9225422 -
Attachment description: WIP: Bug 1308105 - Replace PL_strpbrk with strpbrk → Bug 1308105 - Replace PL_strpbrk with strpbrk
Status: NEW → ASSIGNED
Updated•4 years ago
|
Attachment #9225422 -
Attachment description: Bug 1308105 - Replace PL_strpbrk with strpbrk → WIP: Bug 1308105 - Replace PL_strpbrk with strpbrk
Updated•4 years ago
|
Attachment #9225422 -
Attachment description: WIP: Bug 1308105 - Replace PL_strpbrk with strpbrk → Bug 1308105 - Replace PL_strpbrk with strpbrk
Pushed by valentin.gosu@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/4844183d0b44
Replace PL_strpbrk with strpbrk r=xpcom-reviewers,kmag
Comment 3•4 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
status-firefox93:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 93 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•