Bug 1308105 - Replace PL_strpbrk with strpbrk r=xpcom-reviewers,kmag

Differential Revision: https://phabricator.services.mozilla.com/D116933